// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectField render() renders with form context 1`] = `
<div
  className=""
>
  <div
    className="controls"
  >
    <MultiSelectControl
      disabled={false}
      hideErrorMessage={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "a",
            "value": "a",
          },
          Object {
            "label": "b",
            "value": "b",
          },
        ]
      }
      required={false}
      value={
        Array [
          "a",
          "b",
        ]
      }
    />
  </div>
</div>
`;

exports[`MultiSelectField render() renders without form context 1`] = `
<div
  className=""
>
  <div
    className="controls"
  >
    <MultiSelectControl
      disabled={false}
      hideErrorMessage={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "a",
            "value": "a",
          },
          Object {
            "label": "b",
            "value": "b",
          },
        ]
      }
      required={false}
      value={Array []}
    />
  </div>
</div>
`;
